package com.example.battleshipmobile.ui

object TestTags {
    object LoadingScreen {
        const val Screen = "LoadingScreen"

    }

    object Auth{
        const val Screen = "AuthScreen"
        const val UsernameField = "UsernameField"
        const val PasswordField = "PasswordField"
        const val RepeatPasswordField = "RepeatPasswordField"
        const val AuthSwapLink = "AuthSwapLink"
        const val SubmitButton = "SubmitButton"
    }

    object Home{
        const val RankingsButton = "RankingButton"
        const val CreditsButton = "CreditsButton"
        const val SignInButton = "LoginButton"
        const val Screen = "HomeScreen"
        const val LogoutButton = "LogoutButton"
        const val PlayButton = "PlayButton"
    }

    object Info{
        const val Screen = "InfoScreen"
    }

    object Statistics{
        const val SearchButton = "SearchButton"
        const val SearchField = "SearchField"
        const val Table = "Table"
        const val BackButton = "BackButton"
        const val TableRow = "TableRow"
        const val Screen = "StatisticsScreen"
    }
    object Lobby{
        const val Screen = "QueueScreen"
        const val LoadingIndicator = "LoadingIndicator"
        const val StatusMessage = "StatusText"
        const val LobbyState = "LobbyState"
        const val CancelButton = "CancelButton"
    }

    object Other{
        const val TableRow = "TableRow"
        const val PasswordVisibilityIcon = "PasswordVisibilityIcon"
        const val FieldErrorText = "FieldErrorText"
    }

    object PlaceShipsLayout{
        const val Screen = "PlaceShipsScreen"
    }

    object LayoutDefinition {
        const val ResetFleetButton: String = "ResetFleetButton"
        const val RotateButton: String = "RotateButton"
        const val Board: String = "LayoutDefinitionBoard"
        const val Screen = "LayoutDefinitionScreen"
        const val FleetComposition = "FleetComposition"

    }

}