<resources>
    <string name="app_name">Battleship</string>
    <string name="username_field_label">Username</string>
    <string name="password_field_label">Password</string>
    <string name="general_error">An error has occurred</string>
    <string name="general_error_title">Error</string>
    <string name="ok" translatable="false">OK</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="field_is_blank">Field must not be blank</string>
    <string name="username_is_too_short">Username is to short</string>
...
